<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocalPlayer</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_open">Open</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_search">Search</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_volume">Volume and background</string>
    <string name="menu_stop_background">Stop Background</string>
    <string name="playlist">Playlist</string>
    <string name="browse">Browse</string>
    <string name="checking">Checking…</string>
    <string name="enterPassword">Enter Password:</string>
    <string name="passwordRequired">Password required for \n%s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saveServer">Save server?</string>
    <string name="saveBookmark">Save bookmark</string>
    <string name="unableConnect">Couldnt connect</string>
    <string name="pressBack">Press back again to exit</string>
    <string name="path">Path:</string>
    <string name="url">URL:</string>
    <string name="address">Address:</string>
    <string name="port">Port:</string>
    <string name="enterPath">Enter path:</string>
    <string name="enterName">Enter name:</string>
    <string name="play">Play</string>
    <string name="playBackground">Play in background</string>
    <string name="open">Open</string>
    <string name="up">Up</string>
    <string name="view">View</string>
    <string name="enqueue">Enqueue</string>
    <string name="openFolder">Open containing folder</string>
    <string name="remove">Remove</string>
    <string name="removeBefore">Remove before</string>
    <string name="removeAfter">Remove after</string>
    <string name="clear">Clear all</string>
    <string name="stopAfter">Stop after this</string>
    <string name="pauseAfter">Pause after this</string>
    <string name="clearStopAfter">Clear stop label</string>
    <string name="exit">Exit</string>
    <string name="searchResult">Search results</string>
    <string name="enterRequest">Enter request:</string>
    <string name="wait">Please Wait…</string>
    <string name="addBookmark">Add to bookmarks</string>
    <string name="bookmarkAdded">" added to bookmarks"</string>
    <string name="bookmarkRemoved">" removed from bookmarks"</string>
    <string name="servers">Servers</string>
    <string name="empty">Empty</string>
    <string name="networkError">Network Error</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="master_password">Master password:</string>
    <string name="server_password">New server password:</string>
    <string name="logins">Saved Logins</string>
    <string name="set_password">Set password</string>
    <string name="shareLoginRequired">Login required for: \n%s</string>
    <string name="disconnected">Disconnected</string>
    <string name="mp_volume">Playlist volume</string>
    <string name="back_volume">Background volume</string>
    <string name="back_file">Background file</string>
    <string name="device">Device</string>
    <string name="network">Network</string>
    <string name="files">Files</string>
    <string name="menu_home">Home</string>


</resources>
