<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_connect"
        android:icon="@drawable/connect"
        android:showAsAction="always"
        android:title="@string/menu_connect"/>
    <item
        android:id="@+id/menu_connected"
        android:icon="@drawable/connected"
        android:showAsAction="always"
        android:title="@string/menu_connect"/>
    <item
        android:id="@+id/menu_reload"
        android:icon="@drawable/reload"
        android:showAsAction="always"
        android:title="@string/menu_reload"/>
    <item
        android:id="@+id/menu_browse"
        android:icon="@drawable/browse"
        android:showAsAction="ifRoom"
        android:title="@string/menu_browse"/>
    <item
        android:id="@+id/menu_volume"
        android:icon="@drawable/menu_volume"
        android:showAsAction="ifRoom"
        android:title="@string/menu_volume"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/menu_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>
</menu>